@@ -3,7 +3,6 @@ parts =
     test
     instance
     omelette
-    nodejs
 
 extends =
     http://dist.plone.org/release/4.1-latest/versions.cfg
@@ -35,12 +34,6 @@ eggs =
     example.bootstrap
     ${buildout:package-name}
 environment-vars = zope_i18n_compile_mo_files true
-
-[nodejs]
-recipe = gp.recipe.node
-url = http://nodejs.org/dist/v0.10.26/node-v0.10.26.tar.gz
-npms = less
-scripts = lessc
 
 [test]
 recipe = zc.recipe.testrunner
